--- a/Frontend/src/app/components/organizer-dashboard/organizer-dashboard.html
+++ b/Frontend/src/app/components/organizer-dashboard/organizer-dashboard.html
@@ -365,7 +365,7 @@
   <footer class="dashboard-footer">
     <h2 class="footer-title"><span class="brand-highlight">Happenin'</span></h2>
     <p class="footer-text">For any queries please reach out to us at <span class="gmailid">happenin&#64;gmail.com</span></p>
-    <div class="footer-socials">
+    <!-- <div class="footer-socials">
       <a href="https://www.instagram.com" target="_blank" aria-label="Instagram" class="social-icon">
         <img class="insta-logo" src="/images/instagram.png" alt="Instagram" />
       </a>
@@ -375,7 +375,7 @@
       <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn" class="social-icon">
         <img class="linkedin-logo" src="/images/linkedin.png" alt="LinkedIn" />
       </a>
-    </div>
+    </div> -->
   </footer>
 
   <!-- Loading State -->
